fixed css bug. text was overflowing on small screens, repaced  smoothscroll component. last one was buggy

--- a/src/layouts/Layout/Layout.sass
+++ b/src/layouts/Layout/Layout.sass
@@ -35,16 +35,12 @@ h4
   font-size: 20px
 
 main
-  min-height: 80vh
   margin-left: auto
   margin-right: auto
   max-width: 1000px
   padding: 2*$spacing-normal $spacing-normal
-
-  #header
-    height: 100vh
-
   text-align: center
+
   p
     text-align: left
 footer
